Fixed key-value height on mobile view

--- a/BlazorCV/wwwroot/css/style.scss
+++ b/BlazorCV/wwwroot/css/style.scss
@@ -318,6 +318,8 @@ strong {
     }
 
     .key-value-pair {
+        height: var(--space-xxl);
+
         .value {
             font-size: var(--text-md);
         }
